[workspace]
resolver = "3"
members = ["transportation-simulator"]

[workspace.package]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/ISibboI/transportation-simulator"
edition = "2024"

[workspace.dependencies]
uom = "0.38.0"
optional-numeric-index = "0.4.1"
num-traits = "0.2.19"
tagged-vec = { git = "https://github.com/sebschmi/tagged-vec", rev = "a924aafb72af031d73995d761492cbb54ebea62f" }
tagged-vec-deque = "0.1.0"
approx = "0.5.1"
