[package]
name = "transportation-simulator"
description = "Simulate different modes of transportation and their interactions."
license.workspace = true
repository.workspace = true
version = "0.0.0"
edition.workspace = true

[dependencies]
uom.workspace = true
optional-numeric-index.workspace = true
num-traits.workspace = true
tagged-vec.workspace = true
tagged-vec-deque.workspace = true
approx.workspace = true
